# rainfall-pipeline

./: .env.example  .gitignore  LICENSE  Makefile  PROJECT_CONTEXT.md  README.md  pyproject.toml
.github/workflows/: daily-scrape.yml  deploy-pages.yml  tests.yml
data/: rainfall.db  rainfall.parquet
data/raw/: rainfall_2026-04-13.csv  rainfall_2026-04-14.csv  rainfall_2026-04-15.csv  rainfall_2026-04-16.csv  rainfall_2026-04-17.csv  rainfall_2026-04-18.csv  rainfall_2026-04-19.csv  rainfall_2026-04-20.csv  rainfall_2026-04-21.csv  rainfall_2026-04-22.csv  rainfall_2026-04-24.csv  rainfall_2026-04-26.csv  rainfall_2026-04-27.csv  rainfall_2026-04-28.csv  rainfall_2026-04-30.csv  rainfall_2026-05-01.csv  rainfall_2026-05-02.csv  rainfall_2026-05-03.csv  rainfall_2026-05-04.csv  rainfall_2026-05-05.csv  rainfall_2026-05-06.csv  rainfall_2026-05-08.csv  rainfall_2026-05-09.csv  rainfall_2026-05-10.csv  rainfall_2026-05-11.csv  rainfall_2026-05-13.csv  rainfall_2026-05-15.csv  rainfall_2026-05-16.csv  rainfall_2026-05-17.csv  rainfall_2026-05-18.csv  rainfall_2026-05-19.csv  rainfall_2026-05-20.csv  rainfall_2026-05-23.csv  rainfall_2026-05-24.csv  rainfall_2026-05-25.csv  rainfall_2026-05-27.csv  rainfall_2026-05-28.csv  rainfall_2026-05-29.csv  rainfall_2026-05-30.csv  rainfall_2026-05-31.csv  (+42 more)
docs/: drought.html  heatwave.html  index.html  reservoirs.html  temperature.html
docs/api/: drought-history.json  drought-latest.json  index.json  latest.json  states.json
tests/: test_api_builder.py  test_drought.py  test_parser.py  test_scraper.py  test_storage.py
(+1259 files in other folders)
