[project]
name = "rainfall-pipeline"
version = "0.1.0"
description = "Daily rainfall data pipeline for India (IMD source) — fully open source, zero-cost"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Rainfall Pipeline Contributors" }]

dependencies = [
    "httpx>=0.27",          # HTTP client with retries
    "pdfplumber>=0.11",     # PDF table extraction
    "pandas>=2.2",          # Data manipulation
    "pandera>=0.20",        # Schema validation
    "pyarrow>=16",          # Parquet support
    "tenacity>=8.3",        # Retry decorators
    "structlog>=24.1",      # Structured logging
    "python-dateutil>=2.9", # Robust date parsing
    "click>=8.1",           # CLI
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
rainfall = "rainfall.cli:cli"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
